<resources>
    <string name="app_name">Δίπλωμα Αυτοκινήτου Τεστ ΚΟΚ</string>
    <string name="action_bar">Αρχική</string>
    <string name="purpose">Η εφαρμογή αυτή έχει σκοπό να διευκολύνει την διαδικασία μάθησης των ερωτήσεων ΚΟΚ για δίπλωμα αυτοκινήτου. Προς το παρόν η εφαρμογή είναι μόνο στα ελληνικά και περιέχει ερωτήσεις μόνο για δίπλωμα αυτοκινήτου. Για να ζητήσετε επιπλέον λειτουργίες ή για να με ειδοποιήσετε για οποιοδήποτε πρόβλημα της εφαρμογής, στείλτε μου email στο fak3losyoo@gmail.com</string>
    <string name="critical_explanation">Εδώ βρίσκονται ερωτήσεις που έχετε προηγουμένως απαντήσει λανθασμένα.</string>
    <string name="info1">Η πρώτη κατηγορία μάθησης στοχεύει στα άτομα που δεν έχουν καμία γνώση από σήματα ή ΚΟΚ. Στην κατηγορία αυτή, οι ερωτήσεις δείχνουν εξαρχής την σωστή απάντηση.</string>
    <string name="info2">Η δεύτερη κατηγορία αποτελεί το πρώτο τεστ κατα την διάρκεια της εκμάθησης. Εδώ καλείστε να απαντήσετε τις ερωτήσεις και η σωστή απάντηση σας δίνετε επιτόπου.</string>
    <string name="info3">Η κατηγορία εξέτασης παίζει τον ρόλο της κανονικής θεωρητικής εξέτασης διπλώματος. Καλείστε να απαντήσετε σε 30 τυχαίες ερωτήσεις και στο τέλος σας δίνονται τα αποτελέσματα καθώς επίσης ερωτήσεις που απαντήσατε λανθασμένα. Θυμηθείτε ότι στην κανονική εξέταση αν κάνετε λάθος σε 2 ερωτήσεις κόβεστε!</string>
    <string name="info4">Η r5ndom κατηγορία παίζει τον ρόλο μιας mini-εξέτασης καθώς καλείστε να απαντήσετε σε 5 τυχαίες ερωτήσεις. Ακόμα και μέρες που δεν υπάρχει διάθεση για διάβασμα, ενθαρύνετε να ολοκληρώνετε τουλάχιστον ένα ολόσωστο r5ndom.</string>
    <string name="info5">Οι κρίσιμες ερωτήσεις απαρτίζονται από ερωτήσεις που έχετε απαντήσει λανθασμένα σε οποιαδήποτε κατηγορία.</string>
    Ολοκλήρωσες την κατηγορία
    <string name="complete_cat">Ολοκλήρωσες την κατηγορία </string>
    <string name="app_id_banner">ca-app-pub-4406807379703752/4092054647</string>
    <string name="app_id_interstitial">ca-app-pub-4406807379703752/4983121029</string>
    <string-array name="categories">
        <item>Αλκοόλ</item>
        <item>Αποστάσεις</item>
        <item>Ατύχημα</item>
        <item>Αυτοκινητόδρομος</item>
        <item>Βουνό</item>
        <item>Διαδρομή</item>
        <item>Διασταυρώσεις</item>
        <item>Είσοδος</item>
        <item>Έκτακτα</item>
        <item>Κανόνες</item>
        <item>Κούραση</item>
        <item>Οδηγός</item>
        <item>Οδόστρωμα</item>
        <item>Οικολογία</item>
        <item>Ορατότητα</item>
        <item>Όργανα</item>
        <item>Περιβάλλον</item>
        <item>Προσπέραση</item>
        <item>Προσφυγή</item>
        <item>Σήμανση</item>
        <item>Στάση</item>
        <item>Στροφή</item>
        <item>Συντήρηση</item>
        <item>Συνύπαρξη</item>
        <item>Ταχύτητα</item>

    </string-array>
    <string-array name="category_question_numbers">
        <item>17 ερωτήσεις</item>
        <item>25 ερωτήσεις</item>
        <item>13 ερωτήσεις</item>
        <item>27 ερωτήσεις</item>
        <item>6 ερωτήσεις</item>
        <item>28 ερωτήσεις</item>
        <item>101 ερωτήσεις</item>
        <item>7 ερωτήσεις</item>
        <item>19 ερωτήσεις</item>
        <item>15 ερωτήσεις</item>
        <item>4 ερωτήσεις</item>
        <item>9 ερωτήσεις</item>
        <item>22 ερωτήσεις</item>
        <item>13 ερωτήσεις</item>
        <item>20 ερωτήσεις</item>
        <item>14 ερωτήσεις</item>
        <item>24 ερωτήσεις</item>
        <item>38 ερωτήσεις</item>
        <item>12 ερωτήσεις</item>
        <item>236 ερωτήσεις</item>
        <item>42 ερωτήσεις</item>
        <item>15 ερωτήσεις</item>
        <item>56 ερωτήσεις</item>
        <item>42 ερωτήσεις</item>
        <item>20 ερωτήσεις</item>

    </string-array>
</resources>